Bug 316666 - the new notification system in kate needs to much space (observed in kile)
Summary: the new notification system in kate needs to much space (observed in kile)
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 318784 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-13 14:00 UTC by Till Schäfer
Modified: 2013-08-30 21:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.2
Sentry Crash Report:


Attachments
screen shot of the bug (134.31 KB, image/png)
2013-03-13 14:00 UTC, Till Schäfer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Till Schäfer 2013-03-13 14:00:08 UTC
Created attachment 78016 [details]
screen shot of the bug

Simply look at the screen shot and you know what i mean.
Comment 1 Dominik Haumann 2013-03-23 20:24:58 UTC
Aurelien, the issue also exists in Kate. I'm note 100% sure whether this is a Kate or a KMessageWidget issue.

Steps to reproduce:
1. open an existing file in Kate
2. type in terminal: kate asdf
As result, the existing Kate opens 'asdf', which does not exist. Hence, a message widget is immediately shown, before the view was shown the first time. Therefore, the sizes are wrong.
Can you reproduce?

With GammaRay (http://www.kdab.com/kdab-products/gammaray/) I can see that the size of the QFrame of the KMessageWidget is correct. However, the minimum height of KMessageWidget is far too high and thus wrong. So I think this is a KMessageWidget issue.
Comment 2 Dominik Haumann 2013-04-02 11:49:10 UTC
Aurelien, do you plan to look into this? Otherwise we'll have to find a workaround.
Comment 3 Dominik Haumann 2013-08-12 12:04:36 UTC
*** Bug 318784 has been marked as a duplicate of this bug. ***
Comment 4 Dominik Haumann 2013-08-30 20:52:04 UTC
Git commit 4fb990baefc786491448b48230b4258d52c510b4 by Dominik Haumann.
Committed on 30/08/2013 at 20:51.
Pushed by dhaumann into branch 'master'.

fix resizing issues in kate notifications

FIXED-IN: 4.11.2

M  +3    -2    part/view/kateanimation.cpp

http://commits.kde.org/kate/4fb990baefc786491448b48230b4258d52c510b4
Comment 5 Dominik Haumann 2013-08-30 21:02:31 UTC
Git commit 435480f295482830f0fc1ec6d13190dc33fa3dd1 by Dominik Haumann.
Committed on 30/08/2013 at 20:51.
Pushed by dhaumann into branch 'KDE/4.11'.

fix resizing issues in kate notifications

FIXED-IN: 4.11.2

M  +3    -2    part/view/kateanimation.cpp

http://commits.kde.org/kate/435480f295482830f0fc1ec6d13190dc33fa3dd1
Comment 6 Dominik Haumann 2013-08-30 21:04:58 UTC
I'm sorry for the delays in fixing this. It's fixed for KDE >= 4.11.2. This fix cannot easily be backported to KDE 4.10.