fix resizing issues in kate notifications

FIXED-IN: 4.11.2
BUG: 316666